# Mental-Model-Theory-LLM

./: EVAL_REPORT.md  README.md  pyproject.toml  results.json
evals/: __init__.py  eval_illusory_inferences.py  eval_spatial_reasoning.py  eval_syllogisms.py  run_evals.py
mmt/: __init__.py  _logging.py  agent.py  builder.py  checker.py  compiler.py  counterexample.py  models.py
tests/: test_agent.py  test_builder.py  test_checker.py  test_compiler.py  test_models.py
